--- a/services/candidate-service/src/main/resources/application.properties
+++ b/services/candidate-service/src/main/resources/application.properties
@@ -24,3 +24,7 @@ candidate-service.jwt.refresh-token-validity-in-seconds=86400
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+job-service.url=http://localhost:8083
+user-service.url=http://localhost:8082
+communications-service.url=http://localhost:8085
