--- a/services/communications-service/src/main/resources/application.properties
+++ b/services/communications-service/src/main/resources/application.properties
@@ -59,3 +59,7 @@ management.endpoint.health.show-details=when-authorized
 # Logging
 logging.level.com.example.communications_service=DEBUG
 logging.level.org.springframework.mail=DEBUG
+
+# User Service Configuration
+user-service.url=http://localhost:8082
+candidate-service.url=http://localhost:8084
