--- a/services/candidate-service/pom.xml
+++ b/services/candidate-service/pom.xml
@@ -66,6 +66,16 @@
 			<version>2.0.0</version>
 		</dependency>
 		<dependency>
+    <groupId>com.cloudinary</groupId>
+    <artifactId>cloudinary-taglib</artifactId>
+    <version>2.0.0</version>
+</dependency>
+<dependency>
+    <groupId>io.github.cdimascio</groupId>
+    <artifactId>dotenv-java</artifactId>
+    <version>2.2.4</version>
+</dependency>
+		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
