--- a/services/candidate-service/src/main/resources/application.properties
+++ b/services/candidate-service/src/main/resources/application.properties
@@ -28,3 +28,6 @@ spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.Str
 job-service.url=http://localhost:8083
 user-service.url=http://localhost:8082
 communications-service.url=http://localhost:8085
+
+spring.jmx.enabled=false
+management.endpoints.jmx.exposure.exclude=*
