--- a/services/workflow-service/src/main/resources/application.properties
+++ b/services/workflow-service/src/main/resources/application.properties
@@ -18,5 +18,14 @@ workflow-service.jwt.base64-secret=qoAEABDke07+AVLepXB4aCMtsT0wMAqR5x2VFyldsnx6e
 workflow-service.jwt.access-token-validity-in-seconds=86400
 workflow-service.jwt.refresh-token-validity-in-seconds=86400
 
-
 user-service.url=http://localhost:8082
+
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=workflow-service
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+kafka.topic.recruitment-workflow=recruitment-workflow-events
+kafka.topic.notifications=notification-events
