--- a/services/communications-service/src/main/resources/application.properties
+++ b/services/communications-service/src/main/resources/application.properties
@@ -46,6 +46,11 @@ twilio.phone.number=${TWILIO_PHONE_NUMBER:+1234567890}
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.group-id=communications-service
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+kafka.topic.notifications=notification-events
 
 # Thymeleaf configuration
 spring.thymeleaf.cache=false
