--- a/services/job-service/src/main/resources/application.properties
+++ b/services/job-service/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.kafka.consumer.group-id=job-service
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.application.name=job-service
 
 server.port= 8083
@@ -26,3 +28,5 @@ user-service.jwt.refresh-token-validity-in-seconds=86400
 
 # User Service Configuration
 user-service.url=http://localhost:8082
+workflow-service.url=http://localhost:8086
+kafka.topic.recruitment-workflow=recruitment-workflow-events
