--- a/services/upload-service/pom.xml
+++ b/services/upload-service/pom.xml
@@ -40,9 +40,10 @@
 			<version>2.0.0</version>
 		</dependency>
 		<dependency>
-    <groupId>com.cloudinary</groupId>
-    <artifactId>cloudinary-taglib</artifactId>
-    <version>2.0.0</version>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-taglib</artifactId>
+			<version>2.0.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
