commit before refactor candidate&application

--- a/services/candidate-service/src/main/resources/application.properties
+++ b/services/candidate-service/src/main/resources/application.properties
@@ -27,7 +27,7 @@ spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.Str
 
 job-service.url=http://localhost:8083
 user-service.url=http://localhost:8082
-communications-service.url=http://localhost:8085
+schedule-service.url=http://localhost:8085
 kafka.topic.notifications=notification-events
 
 spring.jmx.enabled=false
