--- a/services/statistics-service/src/main/resources/application.properties
+++ b/services/statistics-service/src/main/resources/application.properties
@@ -11,13 +11,9 @@ user-service.url=http://localhost:8082
 job-service.url=http://localhost:8083
 candidate-service.url=http://localhost:8084
 workflow-service.url=http://localhost:8086
-communications-service.url=http://localhost:8085
+schedule-service.url=http://localhost:8085
 notification-service.url=http://localhost:8088
 
 # Cache configuration
 spring.cache.cache-names=dashboard-stats
 spring.cache.caffeine.spec=maximumSize=1000,expireAfterWrite=5m
-
-# MongoDB configuration
-spring.data.mongodb.uri=mongodb://localhost:27017/statistics_db
-spring.data.mongodb.auto-index-creation=true
