refactor dashboard service

--- a/services/job-service/src/main/resources/application.properties
+++ b/services/job-service/src/main/resources/application.properties
@@ -29,5 +29,6 @@ user-service.jwt.refresh-token-validity-in-seconds=86400
 # User Service Configuration
 user-service.url=http://localhost:8082
 workflow-service.url=http://localhost:8086
+candidate-service.url=http://localhost:8081
 kafka.topic.recruitment-workflow=recruitment-workflow-events
 kafka.topic.notifications=notification-events
