--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,25 @@
 version: "3.8"
 services:
+  # # Database
+  # mysql:
+  #   image: mysql:8.0
+  #   container_name: mysql
+  #   ports:
+  #     - "3306:3306"
+  #   environment:
+  #     MYSQL_ROOT_PASSWORD: 123456
+  #     MYSQL_DATABASE: user_service
+  #   volumes:
+  #     - mysql_data:/var/lib/mysql
+  #   networks:
+  #     - backend-network
+  #   healthcheck:
+  #     test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+  #     interval: 10s
+  #     timeout: 5s
+  #     retries: 5
+
+  # Zookeeper
   zookeeper:
     image: confluentinc/cp-zookeeper:7.6.1
     container_name: zookeeper
@@ -8,7 +28,10 @@ services:
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
+    # networks:
+    #   - backend-network
 
+  # Kafka
   kafka:
     image: confluentinc/cp-kafka:7.6.1
     container_name: kafka
@@ -21,6 +44,238 @@ services:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
       KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+      KAFKA_ADVERTISED_LISTENERS:
+        PLAINTEXT://localhost:9092
+        # KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+#     networks:
+#       - backend-network
+
+#   # Gateway
+#   gateway:
+#     build:
+#       context: ./gateway
+#       dockerfile: Dockerfile
+#     container_name: gateway
+#     ports:
+#       - "8081:8081"
+#     depends_on:
+#       - user-service
+#       - job-service
+#       - candidate-service
+#     networks:
+#       - backend-network
+#     environment:
+#       SPRING_CLOUD_GATEWAY_SERVER_WEBFLUX_ROUTES_0_URI: http://user-service:8082
+#       SPRING_CLOUD_GATEWAY_SERVER_WEBFLUX_ROUTES_1_URI: http://job-service:8083
+#       SPRING_CLOUD_GATEWAY_SERVER_WEBFLUX_ROUTES_2_URI: http://candidate-service:8084
+
+#   # User Service
+#   user-service:
+#     build:
+#       context: ./services/user-service
+#       dockerfile: Dockerfile
+#     container_name: user-service
+#     ports:
+#       - "8082:8082"
+#     depends_on:
+#       mysql:
+#         condition: service_healthy
+#       kafka:
+#         condition: service_started
+#     networks:
+#       - backend-network
+#     environment:
+#       SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/user_service?createDatabaseIfNotExist=true
+#       SPRING_DATASOURCE_USERNAME: root
+#       SPRING_DATASOURCE_PASSWORD: 123456
+#       SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+
+#   # Job Service
+#   job-service:
+#     build:
+#       context: ./services/job-service
+#       dockerfile: Dockerfile
+#     container_name: job-service
+#     ports:
+#       - "8083:8083"
+#     depends_on:
+#       mysql:
+#         condition: service_healthy
+#       kafka:
+#         condition: service_started
+#       user-service:
+#         condition: service_started
+#     networks:
+#       - backend-network
+#     environment:
+#       SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/job_service?createDatabaseIfNotExist=true
+#       SPRING_DATASOURCE_USERNAME: root
+#       SPRING_DATASOURCE_PASSWORD: 123456
+#       SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+#       USER_SERVICE_URL: http://user-service:8082
+
+#   # Candidate Service
+#   candidate-service:
+#     build:
+#       context: ./services/candidate-service
+#       dockerfile: Dockerfile
+#     container_name: candidate-service
+#     ports:
+#       - "8084:8084"
+#     depends_on:
+#       mysql:
+#         condition: service_healthy
+#       kafka:
+#         condition: service_started
+#       user-service:
+#         condition: service_started
+#     networks:
+#       - backend-network
+#     environment:
+#       SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/candidate_service?createDatabaseIfNotExist=true
+#       SPRING_DATASOURCE_USERNAME: root
+#       SPRING_DATASOURCE_PASSWORD: 123456
+#       SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+#       USER_SERVICE_URL: http://user-service:8082
+
+#   # Schedule Service
+#   schedule-service:
+#     build:
+#       context: ./services/schedule-service
+#       dockerfile: Dockerfile
+#     container_name: schedule-service
+#     ports:
+#       - "8085:8085"
+#     depends_on:
+#       mysql:
+#         condition: service_healthy
+#       kafka:
+#         condition: service_started
+#       user-service:
+#         condition: service_started
+#       candidate-service:
+#         condition: service_started
+#     networks:
+#       - backend-network
+#     environment:
+#       SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/schedule_service?createDatabaseIfNotExist=true
+#       SPRING_DATASOURCE_USERNAME: root
+#       SPRING_DATASOURCE_PASSWORD: 123456
+#       SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+#       USER_SERVICE_URL: http://user-service:8082
+#       CANDIDATE_SERVICE_URL: http://candidate-service:8084
+
+#   # Workflow Service
+#   workflow-service:
+#     build:
+#       context: ./services/workflow-service
+#       dockerfile: Dockerfile
+#     container_name: workflow-service
+#     ports:
+#       - "8086:8086"
+#     depends_on:
+#       mysql:
+#         condition: service_healthy
+#       kafka:
+#         condition: service_started
+#     networks:
+#       - backend-network
+#     environment:
+#       SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/workflow_service?createDatabaseIfNotExist=true
+#       SPRING_DATASOURCE_USERNAME: root
+#       SPRING_DATASOURCE_PASSWORD: 123456
+#       SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+
+#   # Upload Service
+#   upload-service:
+#     build:
+#       context: ./services/upload-service
+#       dockerfile: Dockerfile
+#     container_name: upload-service
+#     ports:
+#       - "8087:8087"
+#     depends_on:
+#       kafka:
+#         condition: service_started
+#     networks:
+#       - backend-network
+#     environment:
+#       SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+
+#   # Notification Service
+#   notification-service:
+#     build:
+#       context: ./services/notification-service
+#       dockerfile: Dockerfile
+#     container_name: notification-service
+#     ports:
+#       - "8088:8088"
+#     depends_on:
+#       mysql:
+#         condition: service_healthy
+#       kafka:
+#         condition: service_started
+#     networks:
+#       - backend-network
+#     environment:
+#       SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/notification_service?createDatabaseIfNotExist=true
+#       SPRING_DATASOURCE_USERNAME: root
+#       SPRING_DATASOURCE_PASSWORD: 123456
+#       SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+
+#   # Statistics Service
+#   statistics-service:
+#     build:
+#       context: ./services/statistics-service
+#       dockerfile: Dockerfile
+#     container_name: statistics-service
+#     ports:
+#       - "8089:8089"
+#     depends_on:
+#       user-service:
+#         condition: service_started
+#       job-service:
+#         condition: service_started
+#       candidate-service:
+#         condition: service_started
+#       schedule-service:
+#         condition: service_started
+#     networks:
+#       - backend-network
+#     environment:
+#       USER_SERVICE_URL: http://user-service:8082
+#       JOB_SERVICE_URL: http://job-service:8083
+#       CANDIDATE_SERVICE_URL: http://candidate-service:8084
+#       WORKFLOW_SERVICE_URL: http://workflow-service:8086
+#       SCHEDULE_SERVICE_URL: http://schedule-service:8085
+#       NOTIFICATION_SERVICE_URL: http://notification-service:8088
+
+#   # Email Service
+#   email-service:
+#     build:
+#       context: ./services/email-service
+#       dockerfile: Dockerfile
+#     container_name: email-service
+#     ports:
+#       - "8090:8090"
+#     depends_on:
+#       mysql:
+#         condition: service_healthy
+#       kafka:
+#         condition: service_started
+#     networks:
+#       - backend-network
+#     environment:
+#       SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/email_service?createDatabaseIfNotExist=true
+#       SPRING_DATASOURCE_USERNAME: root
+#       SPRING_DATASOURCE_PASSWORD: 123456
+#       SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+
+# networks:
+#   backend-network:
+#     driver: bridge
+
+# volumes:
+#   mysql_data:
