--- a/services/email-service/src/main/resources/application.properties
+++ b/services/email-service/src/main/resources/application.properties
@@ -20,8 +20,8 @@ email-service.jwt.refresh-token-validity-in-seconds=86400
 # Email configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=quangnv2k03@gmail.com
-spring.mail.password=obxj wxqz sgcr wtpa
+spring.mail.username=hr.melodysoft@gmail.com
+spring.mail.password=sjak ikid hsiw euku
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
