--- a/services/workflow-service/src/main/resources/application.properties
+++ b/services/workflow-service/src/main/resources/application.properties
@@ -19,7 +19,7 @@ workflow-service.jwt.access-token-validity-in-seconds=86400
 workflow-service.jwt.refresh-token-validity-in-seconds=86400
 
 user-service.url=http://localhost:8082
-
+candidate-service.url=http://localhost:8084
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=workflow-service
 spring.kafka.consumer.auto-offset-reset=earliest
